<resources>
    <string name="app_name">Expense Management</string>
    <string name="main_activity_greeting_text_view">Expenses App</string>
    <string name="main_activity_login_button_text">Login</string>
    <string name="main_activity_register_button">Register</string>
    <string name="register_activity_greeting_text">Registration</string>
    <string name="register_activity_firstname_edittext_hint">First name</string>
    <string name="register_activity_lastname_edittext_hint">Last name</string>
    <string name="register_activity_age_edittext_hint">Age</string>
    <string name="register_activity_email_edittext_hint">E-mail</string>
    <string name="register_activity_password_edittext_hint">Password</string>
    <string name="register_activity_continue_button_text">Continue</string>
    <string name="login_activity_email_hint">Type E-mail</string>
    <string name="login_activity_password_hint">Type password</string>
    <string name="add_fragment_name_edittext_hint">Name of expense</string>
    <string name="add_fragment_description_edittext_hint">Description of expense</string>
    <string name="add_fragment_amount_spent_edittext_hint">Amount spent</string>
    <string name="add_fragment_add_button_text">Add</string>
    <string name="taskbar_text_for_add_expense">Add Expense</string>
    <string name="taskbar_text_for_edit_expense">Edit Expense</string>
    <string name="taskbar_text_for_list_expense">List Of Expenses</string>
    <string name="taskbar_text_for_update_expense">Update Expense</string>
    <string name="item_price_example">999</string>
    <string name="item_name_example">MacBook Air M1</string>
    <string name="item_description">2 TB Space Grey</string>
    <string name="update_fragment_update_name_hint">Update Name</string>
    <string name="update_fragment_update_description_hint">Update Description</string>
    <string name="update_fragment_amount_spent_hint">Update Amount Spent</string>
    <string name="update_fragment_update_button_text">Update</string>
    <string name="delete_text">Delete</string>
</resources>